--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -286,9 +286,9 @@ const fontSettings = fontRules(settings.menu.typography);
   ]}
 >
   {
-    settings.menu.position.value.menuBarText && (
+    settings.menu.siteTitle && (
       <div class="top-bar-text-wrapper">
-        <p class="top-bar-text">{settings.menu.position.value.menuBarText}</p>
+        <p class="top-bar-text">{settings.menu.siteTitle}</p>
       </div>
     )
   }
