--- a/src/components/pagebuilder/ImagePopout.astro
+++ b/src/components/pagebuilder/ImagePopout.astro
@@ -46,17 +46,31 @@ if (props.forceAspectRatio) {
 </script>
 <style>
   .image-popout {
+    margin: 0;
     display: flex;
     flex-direction: column;
+    position: relative;
   }
   .image-popout > a {
+    margin: 0;
     cursor: zoom-in;
+    display: flex;
   }
 
   .image-popout figcaption {
     font-style: italic;
-    padding: 1rem;
-    padding-top: 0.5rem;
+    padding: 0.5rem;
+    padding-bottom: 0.7rem;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.687);
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  .image-popout:hover figcaption,
+  .image-popout:focus figcaption {
+    opacity: 1;
   }
 </style>
 
@@ -154,8 +168,7 @@ if (props.forceAspectRatio) {
     data-description={props.caption}
     data-gallery={props.galleryID || getRandomString()}
     class="glightbox"
-  >
-    <Image
+    ><Image
       style={styleAttrs}
       src={images[imagePath]()}
       alt={props.altText || ""}
@@ -164,7 +177,7 @@ if (props.forceAspectRatio) {
     /></a
   >
   {
-    !props.hideCaption && props.caption && (
+    props.hideCaption && props.caption && (
       <figcaption>{props.caption}</figcaption>
     )
   }
