--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -11,7 +11,12 @@ const { Content } = await post.render();
 // Generate static pages
 export async function getStaticPaths() {
   const posts = await getCollection("projects");
-  return posts.map((post) => ({ params: { slug: post.slug } }));
+  return posts
+    .filter((post) => {
+      const isUnpublished = post.data.publishStatus === "unpublished";
+      return !isUnpublished;
+    })
+    .map((post) => ({ params: { slug: post.slug } }));
 }
 ---
 
