--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -12,7 +12,12 @@ const { Content } = await page.render();
 // Generate static pages
 export async function getStaticPaths() {
   const posts = await getCollection("pages");
-  return posts.map((post) => ({ params: { slug: post.slug } }));
+  return posts
+    .filter((post) => {
+      const isUnpublished = post.data.publishStatus === "unpublished";
+      return !isUnpublished;
+    })
+    .map((post) => ({ params: { slug: post.slug } }));
 }
 ---
 
