--- a/src/components/pagebuilder/ImagePopout.astro
+++ b/src/components/pagebuilder/ImagePopout.astro
@@ -45,7 +45,7 @@ if (props.forceAspectRatio) {
 </script>
 <style>
   .image-popout {
-    margin: 0;
+    /* margin: 0; */
     display: flex;
     flex-direction: column;
     position: relative;
