--- a/src/components/portfolioViews/coolTile/CoolTileContainer.astro
+++ b/src/components/portfolioViews/coolTile/CoolTileContainer.astro
@@ -5,17 +5,19 @@ const tileSettings = settings.portfolioLayouts.coolTile;
 import { fontRules } from "../../helpers/fontRuleBuilder";
 // @ts-ignore
 const rules = fontRules(tileSettings.typography);
+import { formatCssRules } from "../../helpers/formatCssRules";
 
+const coolTileRules = formatCssRules({
+  minTileWidth: tileSettings.tiles.minWidth + "px",
+  containerPadding: tileSettings.container.padding,
+  overlayPadding: tileSettings.tiles.overlayPadding,
+  tileGap: tileSettings.container.gap,
+  tileRatio: tileSettings.tiles.aspectRatio,
+  ...rules,
+});
 ---
 
-<style
-  define:vars={{
-    minTileWidth: tileSettings.tiles.minWidth + "px",
-    containerPadding: tileSettings.container.padding,
-    tileGap: tileSettings.container.gap,
-    ...rules,
-  }}
->
+<style>
   .tile-container {
     display: grid;
     grid-template-columns: repeat(
@@ -27,10 +29,6 @@ const rules = fontRules(tileSettings.typography);
   }
 </style>
 
-<div
-  id={props.containerId}
-  class="tile-container"
-  style={{ maxWidth: tileSettings.container.width }}
->
+<div id={props.containerId} class="tile-container" style={coolTileRules}>
   <slot />
 </div>
