--- a/src/components/portfolioViews/tile/TileContainer.astro
+++ b/src/components/portfolioViews/tile/TileContainer.astro
@@ -13,6 +13,7 @@ const coolTileRules = formatCssRules({
   overlayPadding: tileSettings.tiles.overlayPadding,
   tileGap: tileSettings.container.gap,
   tileRatio: tileSettings.tiles.aspectRatio,
+  overlayInset: tileSettings.tiles.overlayInset,
   ...rules,
 });
 ---
