--- a/src/components/portfolioViews/tile/TileItem.astro
+++ b/src/components/portfolioViews/tile/TileItem.astro
@@ -36,6 +36,7 @@ const overlayColor = colord(
     display: flex;
     justify-content: stretch;
     flex-direction: column;
+    padding: var(--overlayInset);
   }
 
   .tile-hover-panel {
@@ -48,7 +49,7 @@ const overlayColor = colord(
     flex-basis: 100%;
     flex-grow: 1;
     transform: scale(0.9);
-    transform-origin: 50% 120% 0;
+
     opacity: 0;
     transition: all 0.3s ease;
     overflow: visible;
@@ -121,7 +122,7 @@ const overlayColor = colord(
 <article
   class="portfolio-tile"
   style={{
-    backgroundColor: "darkgray",
+    backgroundColor: accent,
     backgroundImage: `url(${fancyImage.src})`,
   }}
 >
