--- a/src/components/portfolioViews/coolTile/CoolTileItem.astro
+++ b/src/components/portfolioViews/coolTile/CoolTileItem.astro
@@ -61,6 +61,8 @@ const overlayColor = colord(
   }
   .tile-hover-panel-items {
     background-color: var(--overlayColor, rgba(0, 0, 0, 0.642));
+    backdrop-filter: blur(5px);
+
     padding: var(--overlayPadding);
   }
   .tile-hover-panel-title {
