--- a/src/components/portfolioViews/tile/TileContainer.astro
+++ b/src/components/portfolioViews/tile/TileContainer.astro
@@ -14,6 +14,7 @@ const coolTileRules = formatCssRules({
   tileGap: tileSettings.container.gap,
   tileRatio: tileSettings.tiles.aspectRatio,
   overlayInset: tileSettings.tiles.overlayInset,
+  containerWidth: tileSettings.container.width,
   ...rules,
 });
 ---
@@ -27,6 +28,7 @@ const coolTileRules = formatCssRules({
     );
     gap: var(--tileGap);
     padding: var(--containerPadding);
+    max-width: var(--containerWidth);
   }
 </style>
 
