--- a/src/components/portfolioViews/tile/TileItem.astro
+++ b/src/components/portfolioViews/tile/TileItem.astro
@@ -53,6 +53,7 @@ const overlayColor = colord(
     opacity: 0;
     transition: all 0.3s ease;
     overflow: visible;
+    backdrop-filter: blur(5px);
     background-color: var(--overlayColor, rgba(0, 0, 0, 0.642));
   }
 
