continuing to implement card layout

--- a/src/components/portfolioViews/card/CardContainer.astro
+++ b/src/components/portfolioViews/card/CardContainer.astro
@@ -20,6 +20,9 @@ const cardRules = formatCssRules({
   cardBGColor: cardSettings.card.bgColor,
   cardHoverColor: cardSettings.card.hoverColor,
 
+  imgAspectRatio: cardSettings.image.aspectRatio,
+  imgBorderRadius: cardSettings.image.borderRadius,
+
   ...rules,
 });
 ---
