removes blur from cool tiles since it's glitchy

--- a/src/components/portfolioViews/coolTile/CoolTileItem.astro
+++ b/src/components/portfolioViews/coolTile/CoolTileItem.astro
@@ -30,7 +30,7 @@ const overlayColor = colord(
   .portfolio-tile {
     aspect-ratio: var(--tileRatio);
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
     background-size: cover;
     transition: background 0.5s linear;
     display: flex;
