working on sample projects

--- a/src/components/pagebuilder/SimpleCol.astro
+++ b/src/components/pagebuilder/SimpleCol.astro
@@ -1,3 +1,22 @@
 ---
-
+const { props } = Astro;
+const colWidth = (props.width / 12) * 100 + "%";
 ---
+
+<style>
+  .simple-col {
+    flex-basis: 100%;
+    flex-grow: 1;
+    flex-shrink: 0;
+  }
+
+  @media screen and (min-width: 768px) {
+    .simple-col {
+      flex-basis: var(--colFlexBasis);
+      flex-shrink: 1;
+    }
+  }
+</style>
+<div class="simple-col" style={{ "--colFlexBasis": colWidth }}>
+  <slot />
+</div>
